[gd_scene load_steps=3 format=3 uid="uid://cubtsk185hvvr"]

[ext_resource type="Script" uid="uid://dp6sbe6pjisj3" path="res://scripts/lives_counter.gd" id="1_o6fio"]
[ext_resource type="Texture2D" uid="uid://crdjmlvcqk21d" path="res://assets/images/player_ships/ship_A.png" id="1_peqf3"]

[node name="LivesCounter" type="CanvasLayer"]
script = ExtResource("1_o6fio")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 50.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50

[node name="LivesContainer" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="LifeImage" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(60, 60)
offset_left = 20.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_peqf3")
expand_mode = 3
stretch_mode = 5
